Fixed bug where alignment menu was inaccessible in FF and IE

--- a/flextable/resources/css/flextable.css
+++ b/flextable/resources/css/flextable.css
@@ -133,6 +133,7 @@
 
   .flextable__alignmenu {
     position: absolute;
+    z-index: 1000;
   }
 
     .flextable__alignmenu__btn {
